Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-3202

Clustered broker shuts down with "unknown connection" error

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.11
    • 0.11
    • C++ Clustering
    • None

    Description

      Brokers in a cluster shut down with an "unknown connection" error when running the management test:

        make check TESTS=run_cluster_tests CLUSTER_TESTS=*.test_management*
      

      The unknown connection error is an assertion recently introduced in r1091097, the bug has probably been there for a while.

      Attachments

        Activity

          People

            aconway Alan Conway
            aconway Alan Conway
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: