QPID-3202: Clustered brokers shut down with "unknown connection" error.

This error is an assertion recently introduced in r1091097, the bug
has probably been there for a while.

Two fixes:
- Connections that close before they are announced no longer send a deliver-close.
- Fixed race in OutputInterceptor that sent a deliver-do-output after deliver-close.

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk/qpid@1091790 13f79535-47bb-0310-9956-ffa450edef68